<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".LoginActivity"
    android:padding="18dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/payhive_logo_front" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/login_your_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_layout_background"
        android:orientation="vertical"
        android:padding="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo">

        <EditText
            android:id="@+id/InputLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/login_edittext_backgrouand"
            android:fontFamily="@font/baloo"
            android:hint="@string/email_hint"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/InputLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/login_edittext_backgrouand"
            android:fontFamily="@font/baloo"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/showPasswordCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:minHeight="40dp"
            android:text="@string/show_password"
            android:textColor="#000000"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/showPasswordCheckBox"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:trackColor="@color/Honey"
            app:trackCornerRadius="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/Honey"
                android:fontFamily="@font/baloo"
                android:text="@string/login_button_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="12sp"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/baloo"
                android:text="@string/dont_have_account"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="@color/Honey"
                android:fontFamily="@font/baloo"
                android:paddingVertical="0sp"
                android:text="@string/create_account_button_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="12sp"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>