<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <!-- Rectangle for Total Balance and Profit Percentages -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_background"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/totalbalance_TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/baloo"
                android:text="₱ 0.00"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cashInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_exchange_cashin_button"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/baloo"
                    android:backgroundTint="@color/Honey"
                    app:cornerRadius="12sp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="3dp" />

                <!--                <com.google.android.material.button.MaterialButton-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/fragment_exchange_withdraw_button"-->
                <!--                    android:textSize="10sp"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    android:fontFamily="@font/baloo"-->
                <!--                    android:backgroundTint="@color/Honey"-->
                <!--                    app:cornerRadius="12sp"-->
                <!--                    app:strokeColor="@color/black"-->
                <!--                    app:strokeWidth="3dp" />-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transferButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_exchange_transfer_button"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/baloo"
                    android:backgroundTint="@color/Honey"
                    app:cornerRadius="12sp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="3dp" />
            </LinearLayout>

        </LinearLayout>

        <!-- Rectangle for Crypto Coin Balance and Rate of Exchanges -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_background"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/fragment_exchange_transaction_history"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/TransactionrecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
